--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "01aapp",
-  "homepage": "https://Zareel.github.io/ReactTodoApp_new",
+  "homepage": "https://Zareel.github.io/React-todo-final",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,7 +11,6 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -44,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.2.0",
     "tailwindcss": "^3.4.1"
   },
   "description": "",
